--- a/notebooks/epigame21-standard.ipynb
+++ b/notebooks/epigame21-standard.ipynb
@@ -6,7 +6,7 @@
    "metadata": {},
    "source": [
     "#### This notebook computes a new predictive feature per match (deck-strategy combination).\n",
-    "#### The outcome class is determined based on whether or not the predictive feature falls in the overlapping range (undefined range) of two classes. If it is within the non-overlapping range (green/red arrows in the figure below), what?\n",
+    "#### The outcome class is determined based on whether or not the predictive feature falls in the overlapping range (undefined range) of two classes. If it is within the non-overlapping range (green/red arrows in the figure below), it is not considered.\n",
     "#### For each patient, we calculate the \"weighted AUC\", by multiplying the original predictive feature by the AUC.\n",
     "#### The new predictive feature is then summed for all matches, per patient.\n",
     "#### We then compute the new AUC, based on the new predictive feature."
@@ -272,7 +272,16 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "epigame21_predictive_features = pd.read_excel(main_folder+f\"epigame21_predictive_features.xlsx\", engine='openpyxl')\n",
+    "get_strategy = \"mx\""
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "epigame21_predictive_features = pd.read_excel(main_folder+f\"epigame21_predictive_features.xlsx\", engine='openpyxl').groupby(\"Strategy\").get_group(get_strategy)\n",
     "outcome_prediction_score.sort_values(\"MAUC\")\n",
     "\n",
     "subs = list(range(1,22))\n",
@@ -283,40 +292,41 @@
     "\n",
     "ps_outcome = 1\n",
     "\n",
-    "excluded_cms = []\n",
-    "\n",
+    "excluded_cm = []\n",
     "\n",
     "for index, row in outcome_prediction_score.iterrows():\n",
     "    cm, strategy = row['CM'], row['Strategy']\n",
-    "    \n",
-    "    # epigame21_predictive_features = epigame21_predictive_features[(epigame21_predictive_features.CM != cm) & (epigame21_predictive_features.Strategy != strategy)]\n",
+    "    if strategy==get_strategy and cm!=\"PEC\":\n",
+    "      # epigame21_predictive_features = epigame21_predictive_features[(epigame21_predictive_features.CM != cm) & (epigame21_predictive_features.Strategy != strategy)]\n",
     "\n",
-    "    index_names = epigame21_predictive_features[(epigame21_predictive_features['CM'] == cm) & (epigame21_predictive_features['Strategy'] == strategy)].index\n",
-    "    \n",
-    "    epigame21_predictive_features.drop(index_names, inplace = True)\n",
+    "      index_names = epigame21_predictive_features[(epigame21_predictive_features['CM'] == cm) & (epigame21_predictive_features['Strategy'] == strategy)].index\n",
+    "      \n",
+    "      epigame21_predictive_features.drop(index_names, inplace = True)\n",
     "\n",
-    "    excluded_cms.append(f\"{cm}-{strategy}\")\n",
+    "      excluded_cm.append(cm)\n",
     "\n",
-    "    for sub in subs:\n",
-    "        pfeat_average = 0\n",
-    "        \n",
-    "        if sub in bad_subs: ps_outcome=0\n",
-    "        elif sub in good_subs: ps_outcome=1\n",
+    "      if len(excluded_cm)<31:\n",
+    "        for sub in subs:\n",
+    "            pfeat_average = 0\n",
+    "            \n",
+    "            if sub in bad_subs: ps_outcome=0\n",
+    "            elif sub in good_subs: ps_outcome=1\n",
     "\n",
-    "        data_sub = epigame21_predictive_features.groupby(\"Subject\").get_group(sub).groupby(\"Outcome\")\n",
-    "        for name, group in data_sub:\n",
-    "          if name==ps_outcome: \n",
-    "            data_sub = data_sub.get_group(ps_outcome)\n",
+    "            # consider only correct classifications\n",
+    "            data_sub = epigame21_predictive_features.groupby(\"Subject\").get_group(sub).groupby(\"Outcome\")\n",
+    "            for name, group in data_sub:\n",
+    "              if name==ps_outcome: \n",
+    "                data_sub = data_sub.get_group(ps_outcome)\n",
     "\n",
-    "            pfeat_average = np.average(data_sub[\"Predictive_feature\"]); break\n",
+    "                pfeat_average = np.average(data_sub[\"Predictive_feature\"]); break\n",
     "\n",
-    "        Subject.append(sub)\n",
-    "        Outcome.append(ps_outcome)\n",
-    "        Excluded.append(excluded_cms)\n",
-    "        Predictive_feature.append(pfeat_average)\n",
+    "            Subject.append(sub)\n",
+    "            Outcome.append(ps_outcome)\n",
+    "            Excluded.append(len(excluded_cm))\n",
+    "            Predictive_feature.append(pfeat_average)\n",
     "\n",
     "epigame21_predictive_features_average_pruning = pd.DataFrame({\"Subject\":Subject, \"Outcome\":Outcome, \"Excluded\":Excluded, \"Predictive_feature\":Predictive_feature})\n",
-    "epigame21_predictive_features_average_pruning.to_excel(main_folder+f\"epigame21_predictive_features_average_pruning.xlsx\")"
+    "epigame21_predictive_features_average_pruning.to_excel(main_folder+f\"epigame21_predictive_features_average_pruning_{get_strategy}.xlsx\")"
    ]
   },
   {
