--- a/notebooks/classify_channels.ipynb
+++ b/notebooks/classify_channels.ipynb
@@ -59,9 +59,11 @@
     "from pickle import load\n",
     "import matplotlib.pyplot as plt\n",
     "\n",
-    "from sklearn.model_selection import train_test_split\n",
+    "from sklearn.model_selection import train_test_split, StratifiedKFold, cross_validate\n",
     "from sklearn.linear_model import LogisticRegression\n",
-    "from sklearn.metrics import PrecisionRecallDisplay, RocCurveDisplay, average_precision_score, classification_report"
+    "from sklearn.metrics import PrecisionRecallDisplay, RocCurveDisplay, classification_report\n",
+    "from sklearn.metrics import average_precision_score, roc_auc_score, make_scorer, accuracy_score, precision_score, recall_score, f1_score\n",
+    "from sklearn.ensemble import RandomForestClassifier\n"
    ]
   },
   {
@@ -81,8 +83,6 @@
     "\n",
     "main_folder = f\"/home/kivi/gdrive/epigame-folder/{woi}/\"\n",
     "\n",
-    "path_res = main_folder + \"cvs_pairs/\"\n",
-    "\n",
     "path_deck = main_folder + \"decks/\"\n",
     "path_scores = main_folder + \"game_scores/\""
    ]
@@ -93,39 +93,26 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "FONT_SIZE = 13\n",
-    "def prettify_plot(ax):\n",
-    "    ax.tick_params(axis='both', which='major', labelsize=FONT_SIZE)\n",
-    "    ax.legend(loc='best', prop={'size': FONT_SIZE})\n",
-    "    ax.grid(True)\n",
+    "import pandas as pd\n",
+    "from pickle import load\n",
+    "import matplotlib.pyplot as plt\n",
+    "import numpy as np\n",
     "\n",
-    "def roc_prettify_plot(ax, set_title=True):\n",
-    "    prettify_plot(ax)\n",
-    "    ax.set_xlabel(\"False Positive Rate\", fontsize=FONT_SIZE)\n",
-    "    ax.set_ylabel(\"True Positive Rate\", fontsize=FONT_SIZE)\n",
-    "    if set_title:\n",
-    "        ax.set_title(\"ROC-AUC\", fontsize=15)\n",
+    "from sklearn.model_selection import train_test_split, StratifiedKFold, cross_validate\n",
+    "from sklearn.metrics import PrecisionRecallDisplay, RocCurveDisplay, classification_report\n",
+    "from sklearn.metrics import average_precision_score, roc_auc_score, make_scorer, accuracy_score, precision_score, recall_score, f1_score\n",
     "\n",
-    "def prc_prettify_plot(ax, set_title=True):\n",
-    "    ax.set_ylim(-0.05, 1.05)\n",
-    "    prettify_plot(ax)\n",
-    "    ax.set_xlabel(\"Recall\", fontsize=FONT_SIZE)\n",
-    "    ax.set_ylabel(\"Precision\", fontsize=FONT_SIZE)\n",
-    "    if set_title:\n",
-    "        ax.set_title(\"AUPRC\", fontsize=15)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
+    "from sklearn.ensemble import RandomForestClassifier\n",
+    "from sklearn.linear_model import LogisticRegression\n",
+    "from sklearn.svm import SVC\n",
+    "\n",
     "subs = list(range(1,22))\n",
     "bad_subs = [3,6,10,11,12,17,18]\n",
     "good_subs = [s for s in subs if s not in bad_subs]\n",
     "\n",
     "rounds, turns, n_cards = 100, 10, 24\n",
+    "\n",
+    "Subject, CM, Strategy, Accuracy, Precision, Recall, F1, AUROC, avAUROC, AUPRC_rd, avAUPRC_rd, AUPRC, avAUPRC = [],[],[],[],[],[],[],[],[],[],[],[],[]\n",
     "\n",
     "for sub in subs:\n",
     "\n",
@@ -164,50 +151,44 @@
     "            # define the predictor variables and the response variable\n",
     "            X = data[[\"Game_score\"]]\n",
     "            y = data[\"Label\"]\n",
+    "\n",
+    "            scoring = {'accuracy' : make_scorer(accuracy_score), \n",
+    "                    'precision' : make_scorer(precision_score),\n",
+    "                    'recall' : make_scorer(recall_score), \n",
+    "                    'f1_score' : make_scorer(f1_score),\n",
+    "                    'auc': make_scorer(roc_auc_score),\n",
+    "                    'aps':make_scorer(average_precision_score)}\n",
     "            \n",
-    "            # split the dataset into training (70%) and testing (30%) sets\n",
+    "            kfold = StratifiedKFold(n_splits=7, shuffle=True, random_state=1)\n",
+    "            model = SVC(kernel='linear')\n",
+    "            \n",
+    "            results = cross_validate(estimator=model,\n",
+    "                                    X=X,\n",
+    "                                    y=y,\n",
+    "                                    cv=kfold,\n",
+    "                                    n_jobs=-1,\n",
+    "                                    scoring=scoring)\n",
+    "            \n",
     "            X_train,X_test,y_train,y_test = train_test_split(X,y,test_size=0.3,random_state=0) \n",
-    "            \n",
-    "            # instantiate the model\n",
-    "            log_regression = LogisticRegression()\n",
-    "            \n",
-    "            # fit the model using the training data\n",
-    "            try:\n",
-    "                log_regression.fit(X_train,y_train)\n",
+    "            random_probs = [0 for _ in range(len(y_test))]\n",
+    "            aps_random = average_precision_score(y_test, random_probs) # baseline aps\n",
     "\n",
-    "                # use model to predict probability that given y value is 1\n",
-    "                y_pred_proba = log_regression.predict_proba(X_test)[::,1]\n",
-    "                # y_pred = log_regression.predict(X_test)\n",
-    "                # print(classification_report(y_test, y_pred))\n",
-    "                random_probs = [0 for _ in range(len(y_test))]\n",
-    "                aps_random = average_precision_score(y_test, random_probs) # basleine aps\n",
-    "                aps = average_precision_score(y_test, y_pred_proba)\n",
-    "                if aps-aps_random > best_aps: # difference from baseline aps\n",
-    "                    best_aps = aps\n",
-    "                    best_cm = cm\n",
-    "                    best_strategy = strat.upper()\n",
-    "                    best_y_test = y_test\n",
-    "                    best_y_pred_proba = y_pred_proba\n",
-    "                \n",
-    "            except:\n",
-    "                pass\n",
-    "    try:\n",
-    "        print(\"\\nConnectivity measure:\", best_cm)\n",
-    "        print(\"\\nStrategy:\", best_strategy)\n",
-    "        fig, ax = plt.subplots()\n",
-    "        random_probs = [0 for _ in range(len(best_y_test))]\n",
-    "        RocCurveDisplay.from_predictions(best_y_test, random_probs, name=\"Random Model\", ax=ax)\n",
-    "        RocCurveDisplay.from_predictions(best_y_test, best_y_pred_proba, name=\"Model\", ax=ax)\n",
-    "        roc_prettify_plot(ax)\n",
-    "        plt.show()\n",
-    "        fig, ax = plt.subplots()\n",
-    "        PrecisionRecallDisplay.from_predictions(best_y_test, random_probs, name=\"Random Model\", ax=ax)\n",
-    "        PrecisionRecallDisplay.from_predictions(best_y_test, best_y_pred_proba, name=\"Model\", ax=ax)\n",
-    "        prc_prettify_plot(ax)\n",
-    "        plt.show()\n",
+    "            Subject.append(sub)\n",
+    "            CM.append(cm)\n",
+    "            Strategy.append(strat)\n",
+    "            AUROC.append(results['test_auc'])\n",
+    "            avAUROC.append(np.average(results['test_auc']))\n",
+    "            AUPRC.append(results['test_aps'])\n",
+    "            avAUPRC.append(np.average(results['test_aps']))\n",
+    "            AUPRC_rd.append(aps_random)\n",
+    "            avAUPRC_rd.append(np.average(aps_random))\n",
+    "            Accuracy.append(results['test_accuracy'])\n",
+    "            Precision.append(results['test_precision'])\n",
+    "            Recall.append(results['test_recall'])\n",
+    "            F1.append(results['test_f1_score'])\n",
     "\n",
-    "    except:\n",
-    "        pass"
+    "    classification_table = pd.DataFrame({\"Subject\":Subject, \"CM\":CM, \"Strategy\":Strategy, \"Accuracy\":Accuracy, \"Precision\":Precision, \"Recall\":Recall, \"F1\":F1, \"AUROC\":AUROC, \"avAUROC\":avAUROC, \"AUPRC_rd\":AUPRC_rd, \"avAUPRC_rd\":avAUPRC_rd, \"AUPRC\":AUPRC, \"avAUPRC\":avAUPRC})\n",
+    "    classification_table.to_excel(main_folder+f\"channel_classification_{sigmas}sigma_RFC{ext}.xlsx\")\n"
    ]
   }
  ],
