--- a/notebooks/gcolab_prep_data_for_cm.ipynb
+++ b/notebooks/gcolab_prep_data_for_cm.ipynb
@@ -958,13 +958,14 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from os import makedirs\n",
+    "from google.colab import drive\n",
+    "drive.mount('/content/gdrive')\n",
+    "main_folder = \"/content/gdrive/My Drive/epigame-folder/\"\n",
+    "\n",
+    "from os import makedirs, path\n",
     "from glob import glob\n",
     "\n",
-    "main_folder = \"/home/kivi/gdrive/epigame-folder/\"\n",
-    "\n",
     "subject_fs = {'VBM':250, 'JQN':500, 'BGL':500, 'HDW':500, 'ASJ':500, 'SDA':500, 'MGM':500, 'MSF':500, 'PTD':500, 'RGE':500, 'SRM':500, 'CRD':500, 'CRF':500, 'GTA':500, 'HAF':500, 'VML':1024, 'MRI':500, 'USA':512, 'BRM':512, 'MMM':2048, 'VCG':500}\n",
-    "subject_acronyms = list(subject_fs.keys())\n",
     "subject_ids = {\n",
     "\"ASJ\":1,\n",
     "\"BGL\":2,\n",
@@ -988,8 +989,9 @@
     "\"VCG\":20,\n",
     "\"VML\":21\n",
     "}\n",
+    "subject_acronyms = list(subject_ids.keys())\n",
     "\n",
-    "freq_bands = [None,(0,4),(4,8),(8,13),(13,30),(30,70),(70,150)]\n",
+    "freq_bands = [None, (0,4),(4,8),(8,13),(13,30),(30,70),(70,150)]\n",
     "\n",
     "ext = \"-30sec\" # defined in min_woi_duration in ms"
    ]
@@ -1000,81 +1002,87 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "Data_Ready = False\n",
+    "\n",
     "for bands in freq_bands:\n",
     "    print(bands)\n",
     "\n",
     "    for sub in subject_acronyms:\n",
     "        print(\"Subject ID:\", sub)\n",
     "\n",
-    "        file_seizure = glob(main_folder + f\"data/{sub}*-seizure.EDF\")[0]\n",
+    "        if bands: Data_Ready = path.exists(path_prep + f\"{subject_ids[sub]}{ext}-{bands}.prep\".replace(\" \",\"\"))\n",
+    "        elif bands is None: Data_Ready = path.exists(path_prep + f\"{subject_ids[sub]}{ext}.prep\")\n",
     "\n",
-    "        span, step = 1000, 250      # in ms\n",
-    "        min_woi_duration = 30000    # in ms\n",
-    "        n_epochs = int((min_woi_duration/step)-1)\n",
+    "        if not Data_Ready:\n",
     "\n",
-    "        print(\"Number of epochs to consider for classification =\", n_epochs)\n",
+    "          file_seizure = glob(main_folder + f\"data/{sub}*-seizure.EDF\")[0]\n",
     "\n",
-    "        eeg_seizure = EEG.from_file(file_seizure, epoch(ms(step), ms(span)))    # load raw seizure SEEG data as an EEG object (class) \n",
+    "          span, step = 1000, 250      # in ms\n",
+    "          min_woi_duration = 30000    # in ms\n",
+    "          n_epochs = int((min_woi_duration/step)-1)\n",
     "\n",
-    "        notes_seizure = [note for note in eeg_seizure.notes]\n",
+    "          print(\"Number of epochs to consider for classification =\", n_epochs)\n",
     "\n",
-    "        sz_start_note, sz_end_note = 'EEG inicio', 'EEG fin'\n",
+    "          eeg_seizure = EEG.from_file(file_seizure, epoch(ms(step), ms(span)))    # load raw seizure SEEG data as an EEG object (class) \n",
     "\n",
-    "        if sz_start_note not in notes_seizure:\n",
-    "            altnote = [a for a in notes_seizure if sz_start_note in a]\n",
-    "            print(f\"{sz_start_note} not in seizure recording notes; alternative note found: {altnote}\")\n",
-    "            sz_start_note = altnote[0]\n",
-    "        if sz_end_note not in notes_seizure:\n",
-    "            altnote = [a for a in notes_seizure if sz_end_note in a]\n",
-    "            print(f\"{sz_end_note} not in seizure recording notes; alternative note found: {altnote}\")\n",
-    "            sz_end_note = altnote[0]\n",
+    "          notes_seizure = [note for note in eeg_seizure.notes]\n",
     "\n",
-    "        nodes= list(eeg_seizure.axes.region)\n",
+    "          sz_start_note, sz_end_note = 'EEG inicio', 'EEG fin'\n",
     "\n",
-    "        eeg_seizure._set(fs = subject_fs[sub])\n",
+    "          if sz_start_note not in notes_seizure:\n",
+    "              altnote = [a for a in notes_seizure if sz_start_note in a]\n",
+    "              print(f\"{sz_start_note} not in seizure recording notes; alternative note found: {altnote}\")\n",
+    "              sz_start_note = altnote[0]\n",
+    "          if sz_end_note not in notes_seizure:\n",
+    "              altnote = [a for a in notes_seizure if sz_end_note in a]\n",
+    "              print(f\"{sz_end_note} not in seizure recording notes; alternative note found: {altnote}\")\n",
+    "              sz_end_note = altnote[0]\n",
     "\n",
-    "        fs_min = eeg_seizure.fs\n",
-    "        resampling = 512 if fs_min in [512, 2048] else 500\n",
+    "          nodes= list(eeg_seizure.axes.region)\n",
     "\n",
-    "        SET(eeg_seizure, _as='N')                      # N - baseline (non-seizure)\n",
-    "        SET(eeg_seizure, sz_start_note, 'W')            # W - WOI\n",
-    "        SET(eeg_seizure, sz_end_note, 'S', epoch.END)    # S - seizure\n",
+    "          eeg_seizure._set(fs = subject_fs[sub])\n",
     "\n",
-    "        eeg_seizure.optimize()\n",
-    "        eeg_seizure.remap()\n",
+    "          fs_min = eeg_seizure.fs\n",
+    "          resampling = 512 if fs_min in [512, 2048] else 500\n",
     "\n",
-    "        units = int((eeg_seizure.notes[sz_start_note][0].time - eeg_seizure.notes[sz_end_note][0].time)*(span/step))\n",
+    "          SET(eeg_seizure, _as='N')                      # N - baseline (non-seizure)\n",
+    "          SET(eeg_seizure, sz_start_note, 'W')            # W - WOI\n",
+    "          SET(eeg_seizure, sz_end_note, 'S', epoch.END)    # S - seizure\n",
     "\n",
-    "        woi_start = -int((min_woi_duration/1000)*(span/step))\n",
-    "        woi_end = 0\n",
+    "          eeg_seizure.optimize()\n",
+    "          eeg_seizure.remap()\n",
     "\n",
-    "        eeg_seizure.tag(('W', 'S'), W=range(int(woi_start),int(woi_end),1), S=range(0,units,-1))\n",
+    "          units = int((eeg_seizure.notes[sz_start_note][0].time - eeg_seizure.notes[sz_end_note][0].time)*(span/step))\n",
     "\n",
-    "        a, ai = eeg_seizure.sample.get('S', n_epochs)\n",
-    "        b, bi = eeg_seizure.sample.get('W', n_epochs)\n",
-    "        i = ai + bi\n",
-    "        x = a + b\n",
-    "        y = [1]*n_epochs + [0]*n_epochs\n",
-    "        print(\"Total number of epochs (seizure + baseline) =\", len(x))\n",
+    "          eeg_seizure.tag(('W', 'S'), W=range(-n_epochs,0,1), S=range(0,units,-1))\n",
     "\n",
-    "        pp_seizure = [preprocess(eeg_seizure, ep, resampling) for ep in a] \n",
-    "        print(\"Resampled to\", pp_seizure[0].shape)\n",
+    "          b, bi = eeg_seizure.sample.get('W', n_epochs)\n",
+    "          a, ai = eeg_seizure.sample.get('S', n_epochs)\n",
+    "          i = ai + bi\n",
+    "          x = a + b\n",
+    "          y = [1]*n_epochs + [0]*n_epochs\n",
+    "          print(\"Total number of epochs (seizure + baseline) =\", len(x))\n",
     "\n",
-    "        pp_baseline = [preprocess(eeg_seizure, ep, resampling) for ep in b] \n",
-    "        print(\"Resampled to\", pp_baseline[0].shape)\n",
+    "          pp_seizure = [preprocess(eeg_seizure, ep, resampling) for ep in a] \n",
+    "          print(\"Resampled to\", pp_seizure[0].shape)\n",
     "\n",
-    "        fpp_seizure = [band(e, bands, pp_seizure[0].shape[1]) for e in pp_seizure] if bands is not None else pp_seizure\n",
-    "        fpp_baseline = [band(e, bands, pp_baseline[0].shape[1]) for e in pp_baseline] if bands is not None else pp_baseline\n",
+    "          pp_baseline = [preprocess(eeg_seizure, ep, resampling) for ep in b] \n",
+    "          print(\"Resampled to\", pp_baseline[0].shape)\n",
     "\n",
-    "        ready_epochs = fpp_seizure + fpp_baseline\n",
+    "          fpp_seizure = [band(e, bands, pp_seizure[0].shape[1]) for e in pp_seizure] if bands is not None else pp_seizure\n",
+    "          fpp_baseline = [band(e, bands, pp_baseline[0].shape[1]) for e in pp_baseline] if bands is not None else pp_baseline\n",
     "\n",
-    "        prep = struct(y=array(y), i=array(i), x_prep=ready_epochs, nodes=nodes)\n",
+    "          ready_epochs = fpp_seizure + fpp_baseline\n",
     "\n",
-    "        path_prep = main_folder + \"preprocessed/\"\n",
-    "        makedirs(path_prep, exist_ok=True)\n",
+    "          prep = struct(y=array(y), i=array(i), x_prep=ready_epochs, nodes=nodes)\n",
     "\n",
-    "        if bands is not None:  REc(prep).save(path_prep + f\"{subject_ids[sub]}{ext}-{bands}.prep\".replace(\" \",\"\"))\n",
-    "        elif bands is None:    REc(prep).save(path_prep + f\"{subject_ids[sub]}{ext}.prep\")"
+    "          path_prep = main_folder + \"preprocessed/\"\n",
+    "          makedirs(path_prep, exist_ok=True)\n",
+    "\n",
+    "          if bands is not None:  REc(prep).save(path_prep + f\"{subject_ids[sub]}{ext}-{bands}.prep\".replace(\" \",\"\"))\n",
+    "          elif bands is None:    REc(prep).save(path_prep + f\"{subject_ids[sub]}{ext}.prep\")\n",
+    "        \n",
+    "        if Data_Ready: print(\"Data already preprocessed.\")"
    ]
   }
  ],
