--- a/notebooks/NMM.ipynb
+++ b/notebooks/NMM.ipynb
@@ -1342,7 +1342,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "CM = analyze_epoch(fpp_data, phaselag, dtail=True)"
+    "emp_cm = analyze_epoch(fpp_data, phaselag, dtail=True)"
    ]
   },
   {
