--- a/notebooks/NMM.ipynb
+++ b/notebooks/NMM.ipynb
@@ -1304,6 +1304,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "import ipywidgets as widgets\n",
+    "\n",
     "def preprocess(epoch, fs, limit=500): \n",
     "    \"\"\"Primary preprocessing. Resamples data to a limit frequency and applies a notch filter.\n",
     "\n",
@@ -1324,7 +1326,13 @@
     "resampling = 512 if subject_fs[sub] in [512, 2048] else 500\n",
     "pp_data = [preprocess(channel, subject_fs[sub]) for channel in data]\n",
     "\n",
-    "bands = [8, 12]\n",
+    "# Select Frequency Range\n",
+    "bands = [8,12]\n",
+    "\n",
+    "freq = widgets.IntRangeSlider(min=1, max=46, description='Frequency (Hz)', value=bands, layout=widgets.Layout(width='80%'), \n",
+    "                              style={'description_width': 'initial'})\n",
+    "display(freq)\n",
+    "\n",
     "fpp_data = [band(e, bands, pp_data[0].shape[1]) for e in pp_data] if bands is not None else pp_data"
    ]
   },
@@ -1363,7 +1371,6 @@
     "import xarray as xr\n",
     "import matplotlib.pyplot as plt\n",
     "import seaborn as sns\n",
-    "import ipywidgets as widgets\n",
     "from IPython.utils import io\n",
     "import warnings\n",
     "warnings.simplefilter(action='ignore', category=FutureWarning)\n",
@@ -1443,7 +1450,10 @@
    "outputs": [],
    "source": [
     "emp_labels = labels\n",
-    "plot_timepoints = duration"
+    "plot_timepoints = duration\n",
+    "signal = fpp_data\n",
+    "region_labels = labels\n",
+    "nr_regions = len(region_labels)"
    ]
   },
   {
@@ -1452,23 +1462,6 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "signal = Signal.from_file(os.path.join('examples', 'data','rs-meg.nc'))\n",
-    "region_labels = signal.data.regions.values\n",
-    "nr_regions = len(region_labels)\n",
-    "display(signal.data)\n",
-    "\n",
-    "print('Select a region from the AAL2 atlas and a frequency range')\n",
-    "# Select a Region \n",
-    "target = widgets.Select(options=region_labels, value='PreCG.L', description='Regions', \n",
-    "                        tooltips=['Description of slow', 'Description of regular', 'Description of fast'], \n",
-    "                        layout=widgets.Layout(width='50%', height='150px'))\n",
-    "display(target)\n",
-    "\n",
-    "# Select Frequency Range\n",
-    "freq = widgets.IntRangeSlider(min=1, max=46, description='Frequency (Hz)', value=bands, layout=widgets.Layout(width='80%'), \n",
-    "                              style={'description_width': 'initial'})\n",
-    "display(freq)\n",
-    "\n",
     "# Create xr DataArray from the simulated excitatory timeseries (keeping the region labels)\n",
     "sim_signal = xr.DataArray(wc.exc[:, int(1000/wc.params.dt):], dims=(\"regions\", \"time\"), coords={\"regions\": emp_labels, \"time\": wc.t[int(1000/wc.params.dt):]/1000}, \n",
     "                          attrs={'atlas':'AAL2'})\n",
@@ -1478,22 +1471,10 @@
     "\n",
     "# Filter signal\n",
     "sim_signal = Signal(sim_signal)\n",
-    "sim_signal.resample(to_frequency=100)\n",
+    "sim_signal.resample(to_frequency=resampling)\n",
     "with io.capture_output() as captured:\n",
     "    sim_signal.filter(freq.value[0], freq.value[1], inplace=True);\n",
-    "sns.lineplot(x=sim_signal.data.time[:plot_timepoints].values, y=sim_signal.data.sel(regions=target.value)[:plot_timepoints].values, ax=ax, label='Filtered Signal')\n",
-    "\n",
-    "# Extract signal envelope \n",
-    "sim_signal.hilbert_transform('amplitude', inplace=True)\n",
-    "sns.lineplot(x=sim_signal.data.time[:plot_timepoints].values, y=sim_signal.data.sel(regions=target.value)[:plot_timepoints].values, ax=ax, label='Signal Envelope')\n",
-    "\n",
-    "# Low-Pass Filter\n",
-    "with io.capture_output() as captured:\n",
-    "    sim_signal.filter(low_freq=None, high_freq=low_pass.value, inplace=True)\n",
-    "sns.lineplot(x=sim_signal.data.time[:plot_timepoints].values, y=sim_signal.data.sel(regions=target.value)[:plot_timepoints].values, ax=ax, label='Low-Pass Signal Envelope')\n",
-    "ax.legend(bbox_to_anchor=(1.2, 1),borderaxespad=0)\n",
-    "ax.set_title(f'Simulated Signal of Target Region Y ({target.value})');\n",
-    "sns.despine(trim=True)"
+    "sns.lineplot(x=sim_signal.data.time[:plot_timepoints].values, y=sim_signal.data.sel(regions=target.value)[:plot_timepoints].values, ax=ax, label='Filtered Signal')"
    ]
   },
   {
