--- a/notebooks/outcome_prediction.ipynb
+++ b/notebooks/outcome_prediction.ipynb
@@ -177,7 +177,7 @@
         "import matplotlib.pyplot as plt\n",
         "import seaborn as sns\n",
         "\n",
-        "!pip install statannot\n",
+        "# !pip install statannot\n",
         "from statannot import add_stat_annotation\n",
         "\n",
         "from scipy.stats import shapiro, mannwhitneyu, ttest_ind\n",
@@ -188,7 +188,7 @@
         "\n",
         "Sigmas, CM, Strategy, Gauss, Pvalue_Shapiro, Test, Pvalue, MAUC, T, TN, TP = [],[],[],[],[],[],[],[],[],[],[]\n",
         "\n",
-        "for sigmas in [2,3,4]:\n",
+        "for sigmas in [3,4]:\n",
         "\n",
         "    load_data = pd.read_excel(main_folder+f\"surgical_outcome_data_{sigmas}sigma{ext}.xlsx\", engine='openpyxl')\n",
         "\n",
@@ -207,8 +207,8 @@
         "            # calculate moving threshold-based AUC\n",
         "            mauc = moving_thresh_auc(x_plot, y_plot, moving_step=0.00001)\n",
         "\n",
-        "            group1 = [x for i,x in enumerate(x_plot) if y_plot[i]==1]\n",
-        "            group0 = [x for i,x in enumerate(x_plot) if y_plot[i]==0]\n",
+        "            group1 = [x for i,x in enumerate(x_plot) if y_plot[i]==\"good\"]\n",
+        "            group0 = [x for i,x in enumerate(x_plot) if y_plot[i]==\"bad\"]\n",
         "\n",
         "            gaussian, stest = False, ''\n",
         "            stat1, p1 = shapiro(group1)\n",
@@ -278,7 +278,7 @@
       "name": "python",
       "nbconvert_exporter": "python",
       "pygments_lexer": "ipython3",
-      "version": "3.10.6"
+      "version": "3.9.13"
     },
     "orig_nbformat": 4
   },
